--- a/src/shared/ui/phoneContainer/styles.module.css
+++ b/src/shared/ui/phoneContainer/styles.module.css
@@ -17,8 +17,7 @@
   max-height: 100%;
   overflow: hidden;
   background: rgba(255, 255, 255, 1);
-  clip-path: inset(8.4% 30.6% round 40px);
-  border-radius: 72px;
+  clip-path: inset(8.4% 30.6% round 5%);
 }
 
 .phoneSpeaker {
@@ -29,8 +28,8 @@
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(0, 0, 0);
-  width: 92px;
-  height: 28px;
+  width: 11.5%;
+  height: 3.5%;
   border-radius: 16px;
   z-index: 10;
 }
