--- a/src/shared/ui/ThemeContainer/styles.module.css
+++ b/src/shared/ui/ThemeContainer/styles.module.css
@@ -2,6 +2,8 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 .container_lightMode {
