--- a/src/shared/ui/TrackListButton/styles.module.css
+++ b/src/shared/ui/TrackListButton/styles.module.css
@@ -8,6 +8,8 @@
   font-size: 20px !important;
 }
 
-.listViewRightButton {
+.muteButton {
+  position: absolute;
+  bottom: 100px;
   left: 292px;
 }
